k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-only-from-backend
  namespace: kindergarten
spec:
  podSelector:
    matchLabels:
      app: mongodb
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mqtt-only-from-backend
  namespace: kindergarten
spec:
  podSelector:
    matchLabels:
      app: mqtt
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend
